kubernetes/smart-home/zigbee2mqtt/zigbee2mqtt.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
spec:
  selector:
    matchLabels:
      app: zigbee2mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      containers:
        - name: zigbee2mqtt
          image: ghcr.io/koenkk/zigbee2mqtt:1.33.0
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            privileged: true
          volumeMounts:
            - name: app-data
              mountPath: /app/data
            - name: zigbee2mqtt-initial-config
              mountPath: /app/configuration.yaml
              subPath: configuration.yml
            - name: zzh-device
              mountPath: /dev/ttyUSB0
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-app-data
        - name: zigbee2mqtt-initial-config
          configMap:
            name: zigbee2mqtt-initial-config
        - name: zzh-device
          hostPath:
            path: /dev/ttyUSB0

---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    app: zigbee2mqtt

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: authentik-auth@kubernetescrd
spec:
  rules:
    - host: zigbee2mqtt.linkvt.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: zigbee2mqtt
                port:
                  name: http
